// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Snapshot Tests: convertStepAnimationToIntents for math-001 > should match snapshot for step 0: draw edges 1`] = `
[
  {
    "pairs": [
      "BC-CD",
      "AB-DE",
    ],
    "type": "showEqualMark",
  },
  {
    "edges": [
      "AB",
      "BC",
      "CD",
      "AD",
    ],
    "type": "drawEdges",
  },
]
`;

exports[`Snapshot Tests: convertStepAnimationToIntents for math-001 > should match snapshot for step 1: flash angle A 1`] = `
[
  {
    "angle": "A",
    "type": "showAngle",
  },
]
`;

exports[`Snapshot Tests: convertStepAnimationToIntents for math-001 > should match snapshot for step 2: flash angle BCD 1`] = `
[
  {
    "angle": "BCD",
    "type": "showAngle",
  },
]
`;

exports[`Snapshot Tests: convertStepAnimationToIntents for math-001 > should match snapshot for step 3: flyout compare BC=CD 1`] = `
[
  {
    "edge1": "BC",
    "edge2": "CD",
    "label": "BC = DC",
    "type": "compareEdges",
  },
  {
    "color": undefined,
    "colors": undefined,
    "triangles": [
      "BCD",
    ],
    "type": "fillTriangles",
  },
]
`;

exports[`Snapshot Tests: convertStepAnimationToIntents for math-001 > should match snapshot for step 4: draw edge DE and highlights 1`] = `
[
  {
    "highlights": [
      {
        "target": "edge-AD",
      },
      {
        "target": "edge-DE",
      },
    ],
    "type": "highlights",
  },
  {
    "edges": [
      "DE",
    ],
    "type": "drawEdges",
  },
]
`;

exports[`Snapshot Tests: convertStepAnimationToIntents for math-001 > should match snapshot for step 5: flyout compare AB=DE 1`] = `
[
  {
    "edge1": "AB",
    "edge2": "DE",
    "label": "AB = DE",
    "type": "compareEdges",
  },
]
`;

exports[`Snapshot Tests: convertStepAnimationToIntents for math-001 > should match snapshot for step 6: flash angles A and BCD 1`] = `
[
  {
    "angle1": "A",
    "angle2": "BCD",
    "type": "compareAngles",
  },
]
`;

exports[`Snapshot Tests: convertStepAnimationToIntents for math-001 > should match snapshot for step 7: flash angles ABC and ADC 1`] = `
[
  {
    "angle1": "ABC",
    "angle2": "ADC",
    "type": "compareAngles",
  },
]
`;

exports[`Snapshot Tests: convertStepAnimationToIntents for math-001 > should match snapshot for step 8: flash angles ADC and EDC 1`] = `
[
  {
    "angle1": "ADC",
    "angle2": "EDC",
    "type": "compareAngles",
  },
]
`;

exports[`Snapshot Tests: convertStepAnimationToIntents for math-001 > should match snapshot for step 9: flash angles ABC and EDC 1`] = `
[
  {
    "angle1": "ABC",
    "angle2": "EDC",
    "type": "compareAngles",
  },
]
`;

exports[`Snapshot Tests: convertStepAnimationToIntents for math-001 > should match snapshot for step 10: highlight edges AB and DE 1`] = `
[
  {
    "edges": [
      {
        "color": "#EF4444",
        "edge": "AB",
      },
      {
        "color": "#EF4444",
        "edge": "BC",
      },
      {
        "color": "#10B981",
        "edge": "DE",
      },
      {
        "color": "#10B981",
        "edge": "CD",
      },
    ],
    "type": "highlightEdges",
  },
  {
    "color": undefined,
    "colors": {
      "ABC": "#EF4444",
      "EDC": "#10B981",
    },
    "triangles": [
      "ABC",
      "EDC",
    ],
    "type": "fillTriangles",
  },
]
`;

exports[`Snapshot Tests: convertStepAnimationToIntents for math-001 > should match snapshot for step 11: highlight edges and fill triangle ABC 1`] = `
[
  {
    "edges": [
      {
        "color": "red",
        "edge": "AB",
      },
      {
        "color": "green",
        "edge": "DE",
      },
    ],
    "type": "highlightEdges",
  },
  {
    "color": undefined,
    "colors": undefined,
    "triangles": [
      "ABC",
    ],
    "type": "fillTriangles",
  },
]
`;

exports[`Snapshot Tests: convertStepAnimationToIntents for math-001 > should match snapshot for step 12: highlight edges, show equal marks, fill triangle EDC 1`] = `
[
  {
    "pairs": [
      "BC-CD",
    ],
    "type": "showEqualMark",
  },
  {
    "edges": [
      {
        "color": "red",
        "edge": "BC",
      },
      {
        "color": "green",
        "edge": "CD",
      },
    ],
    "type": "highlightEdges",
  },
  {
    "color": undefined,
    "colors": undefined,
    "triangles": [
      "EDC",
    ],
    "type": "fillTriangles",
  },
]
`;

exports[`Snapshot Tests: convertStepAnimationToIntents for math-001 > should match snapshot for step 13: fill triangles ABC and EDC 1`] = `
[
  {
    "angle": "ABC",
    "type": "showAngle",
  },
  {
    "angle": "EDC",
    "type": "showAngle",
  },
  {
    "color": undefined,
    "colors": undefined,
    "triangles": [
      "ABC",
      "EDC",
    ],
    "type": "fillTriangles",
  },
]
`;

exports[`Snapshot Tests: convertStepAnimationToIntents for math-001 > should match snapshot for step 14: highlight edges and fill both triangles 1`] = `
[
  {
    "method": "SAS",
    "pairs": [
      {
        "items": [
          "AB",
          "DE",
        ],
        "type": "edge",
      },
      {
        "items": [
          "ABC",
          "EDC",
        ],
        "type": "angle",
      },
      {
        "items": [
          "BC",
          "DC",
        ],
        "type": "edge",
      },
    ],
    "triangle1": "ABC",
    "triangle2": "EDC",
    "type": "proveCongruent",
  },
  {
    "color": undefined,
    "colors": undefined,
    "triangles": [
      "ABC",
      "EDC",
    ],
    "type": "fillTriangles",
  },
]
`;
